tests/ui/traits/next-solver/opaques/wrong-typing-mode-ice-1.stderr
error[E0080]: evaluation panicked: not yet implemented
  --> $DIR/wrong-typing-mode-ice-1.rs:24:26
   |
LL | static POOL: Task<Foo> = todo!();
   |                          ^^^^^^^ evaluation of `POOL` failed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
